--- a/New-Site/css/sam-Redo.css
+++ b/New-Site/css/sam-Redo.css
@@ -1,6 +1,26 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Montserrat:wght@400;700&display=swap');
 
+/*
+Basic Page setup - global
+*/
+body {
+	background-color: #DDDDDD;
+	font-family: "Montserrat", "Lora", Verdana, 'Times New Roman';
+	color: #222222;
+}
+
+/*
+Nav Bar - global
+(and #top to space content down)
+*/
+
+#top {
+	height: 2em;
+	min-height: 4vh;
+	background: none;
+}
+
 nav {
 	position: fixed;
 	top: 0px;
@@ -10,7 +30,7 @@ nav {
 	height: 3em;
 	min-height: 5vh;
 	
-	background: #000000;
+	background-color: #222222;
 	font-family: "Montserrat";
 	
 	display: flex;
@@ -23,7 +43,7 @@ nav {
 }
 
 #navTitle {
-	color: #FFFFFF;
+	color: #DDDDDD;
 	margin: 2vw;
 	height: 3em;
 	min-height: 5vh;
@@ -35,7 +55,7 @@ nav {
 }
 
 .navItem {
-	color: #FFFFFF;
+	color: #DDDDDD;
 	margin: 2vw;
 	height: 3em;
 	min-height: 5vh;
@@ -45,14 +65,186 @@ nav {
 	justify-content: space-evenly;
     align-items: center;
 	
-	transition: background-color 0.5s, font-weight 0.5s, width 0.5s;
+	transition: background-color 0.5s, color 0.5s, font-weight 0.5s, width 0.5s;
 	transition-delay: border-radius 0.5s;
-	background-color: #000000;
+	background-color: #222222;
 	font-weight: normal;
 }
 
 .navItem:hover {
 	background-color: #005522;
+	color: #FFFFFF;
 	font-weight: bold;
 	width: 13.25vw;
+}
+
+/*
+Main materials - global
+*/
+
+.sectionContainer {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+
+	width: 100%;
+}
+
+.section {
+	background-color: #FFFFFF;
+	color: #222222;
+
+	width: 100%;
+	border-radius: 2vw;
+
+	margin-left: 2vw;
+	margin-right: 2vw;
+
+	display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.section > * {
+	margin-left: 1vh;
+	margin-right: 1vh;
+}
+
+.sectionTitle {
+	color:#222222;
+}
+
+.section > hr {
+	display: block;
+	width: calc(100% - 2vh);
+	background-color: #005522;
+	height: 2px;
+	margin: -1vh;
+}
+
+/*
+Dataset Info - specific
+*/
+
+#dataTable {
+	width: 100%;
+	margin-top: 1.85vh;
+	margin-bottom: 1vw;
+}
+
+.siteTitleDataInfo {
+	font-family: "Lora";
+	font-size: 2em;
+
+	color: #005522;
+	display: flex;
+	justify-content: center;
+}
+
+/*
+Data Vis - specific
+*/
+
+.siteTitleDataVis {
+	font-family: "Lora";
+	font-size: 2em;
+	margin-top: 4%;
+	margin-bottom: 1%;
+
+	color: #005522;
+	display: flex;
+	justify-content: center;
+}
+
+.dataGraph {
+	
+}
+
+/*
+About Us - specific
+*/
+
+.siteTitleAboutUs {
+	font-family: "Lora";
+	font-size: 2em;
+	margin-top: 4%;
+	margin-bottom: -2.5%;
+
+	color: #005522;
+	display: flex;
+	justify-content: center;
+}
+
+.aboutUsList {
+	display: flex;
+	margin-left: -2.5vw;
+}
+
+.aboutUsList > ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-evenly;
+	width: 100%;
+}
+
+.aboutUsList > ul > li {
+    width: 22%;
+	padding-left: 1%;
+	padding-right: 1%;
+	
+	background-color: #FFFFFF;
+	border-radius: 2.5vw;
+	
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.aboutUsPhoto {
+	aspect-ratio: 1;
+	width: 100%;
+	border-radius: 2.5em;
+}
+
+.aboutUsList > ul > li > hr {
+	display: block;
+	width: 100%;
+	background-color: #005522;
+	height: 2px;
+	margin: -1vh;
+	margin-top: -3%;
+	margin-bottom: 3%;
+}
+
+.contactButton {
+	width: 20vw;
+	height: 2.25em;
+	border-radius: .75em;
+	border: 0px;
+	margin-bottom: 1%;
+	
+	font-size: 1em;
+	font-size-adjust: auto;
+	
+	background-color: #157525;
+	color: #FFFFFF;
+	
+	transition: color 0.5s, background-color 0.5s;
+}
+
+.contactButton:hover {
+	color: #005522;
+	background-color: #DDDDDD;
+	cursor: pointer;
+}
+
+/*
+Footer - global
+*/
+
+footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
